--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@atlaskit/field-text": "^7.0.19",
+    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
     "elemental": "^0.6.1",
     "firebase": "^5.7.2",
